[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Pawns/Parts/Timers.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Pawns/Pawn_11/Parts/Pawn_11_Part_Tracks.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Pawns/Pawn_11/Parts/Pawn_11_Part_Head.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Pawns/Pawn_11/Parts/Pawn_11_Part_Body.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Pawns/Pawn_11.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Pawns/Pawn_05/Parts/Pawn_05_Part_Key.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Pawns/Pawn_07/Parts/Pawn_07_Part_Fire.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.0
height = 18.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 23.0
height = 44.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 6.0
height = 46.0

[node name="Pawn_11" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 66078
script = ExtResource( 5 )

[node name="Timers" parent="." instance=ExtResource( 1 )]

[node name="Raycast" type="Node2D" parent="."]
visible = false

[node name="Down_L" type="RayCast2D" parent="Raycast"]
position = Vector2( -11, 19 )
enabled = true
cast_to = Vector2( 0, 4 )
collision_mask = 14

[node name="Down_R" type="RayCast2D" parent="Raycast"]
position = Vector2( 11, 19 )
enabled = true
cast_to = Vector2( 0, 4 )
collision_mask = 14

[node name="Up" type="RayCast2D" parent="Raycast"]
position = Vector2( 0, -22 )
enabled = true
cast_to = Vector2( 0, -5 )
collision_mask = 14

[node name="Pawn_11_Part_Body" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 7 )

[node name="Pawn_07_Part_Fire" parent="Pawn_11_Part_Body" instance=ExtResource( 7 )]
position = Vector2( 0.808411, 21 )

[node name="Pawn_11_Part_Tracks" parent="Pawn_11_Part_Body" instance=ExtResource( 2 )]
position = Vector2( 0, 3.90835 )

[node name="Pawn_11_Part_Head" parent="Pawn_11_Part_Body" instance=ExtResource( 3 )]
position = Vector2( -0.191589, -15.0916 )

[node name="Pawn_05_Part_Key" parent="Pawn_11_Part_Body" instance=ExtResource( 6 )]
show_behind_parent = true
position = Vector2( -2, -12 )

[node name="Shape_Stand" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Shape_Prone" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Pick_Up_Area" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pick_Up_Area"]
position = Vector2( 0, -1 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Ladder_Area" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder_Area"]
position = Vector2( -0.191589, 0 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
[connection signal="body_entered" from="Pick_Up_Area" to="." method="_on_Pick_Up_Area_body_entered"]
[connection signal="body_exited" from="Pick_Up_Area" to="." method="_on_Pick_Up_Area_body_exited"]
[connection signal="body_entered" from="Ladder_Area" to="." method="_on_Ladder_Area_body_entered"]
[connection signal="body_exited" from="Ladder_Area" to="." method="_on_Ladder_Area_body_exited"]
